--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -53,6 +53,7 @@ target_sources(${CMAKE_PROJECT_NAME} PRIVATE
     Core/Src/rtos_isr_bridge.c
     Core/Src/LS013B7DH05.c
     Core/Src/font8x8_basic.c
+    Core/Src/display_task.c
 )
 
 # Add include paths
