--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -55,6 +55,7 @@ target_sources(${CMAKE_PROJECT_NAME} PRIVATE
     Core/Src/font8x8_basic.c
     Core/Src/display_task.c
     Core/Src/display_renderer.c
+    Core/Src/ui_task.c
 )
 
 # Add include paths
