--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -51,6 +51,8 @@ target_sources(${CMAKE_PROJECT_NAME} PRIVATE
     Core/Src/ADP5360.c
     Core/Src/debug_uart.c
     Core/Src/rtos_isr_bridge.c
+    Core/Src/TMAG5273.c
+    Core/Src/TMAG_joy.c
     Core/Src/LS013B7DH05.c
     Core/Src/font8x8_basic.c
     Core/Src/display_task.c
