--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -62,6 +62,7 @@ target_sources(${CMAKE_PROJECT_NAME} PRIVATE
     Core/Src/ui_task.c
     Core/Src/game_task.c
     Core/Src/sensor_task.c
+    Core/Src/audio_task.c
 )
 
 # Speed up hot render paths.
