sleep options page added

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -70,6 +70,7 @@ target_sources(${CMAKE_PROJECT_NAME} PRIVATE
     Core/Src/page_sound.c
     Core/Src/page_menu_input.c
     Core/Src/page_batt_stats.c
+    Core/Src/page_sleep.c
     Core/Src/page_storage.c
     Core/Src/settings.c
     Core/Src/game_task.c
