--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -75,6 +75,7 @@ target_sources(${CMAKE_PROJECT_NAME} PRIVATE
     Core/Src/page_sleep.c
     Core/Src/page_rtc_set.c
     Core/Src/page_storage.c
+    Core/Src/page_seed.c
     Core/Src/page_lis2.c
     Core/Src/page_lis2_steps.c
     Core/Src/sleep_face.c
